# simsdp-generic-imaging-pipeline

./: .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
experimental_result_data/: experimental_result_data.ipynb  plot_rmse_compare.py  plot_simulation.py  plot_simulation_numvis.py
experimental_result_data/moldable/measure/: fft.csv  g2g.csv  g2g_clean.csv
experimental_result_data/moldable/simu/: dft.csv  fft.csv  g2g.csv  g2g_clean.csv
experimental_result_data/moldable/simu_sota/: dft.csv  fft.csv  g2g.csv  test.md
g2g_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  channel_modifications.py  spec_types.py
g2g_lib/common/: complex_structure.h  interpolation_parameters.h  spec_types.h
g2g_lib/cpu/: CMakeCache.txt  Makefile  cmake_install.cmake  polarization_strategies.h  sky2sky_matrix.h
g2g_lib/cpu/double_float/: Makefile  cmake_install.cmake
g2g_lib/cpu/single_float/: CMakeLists.txt  Makefile
g2g_lib/gpu/cuda/: CMakeLists.txt  cmake_install.cmake  cuda_error.h  interpolation_wrapper.cu  reduction.h
g2g_lib/gpu/cuda/double_float/: CMakeLists.txt  cmake_install.cmake
g2g_optim_actor/g2g/: CMakeLists.txt  libcpu_skytosky_single.h  main.cpp
g2g_optim_actor/g2g_lib/: CMakeLists.txt  cmake_install.cmake  interpolation_parameters.py  load_skytosky_lib.py  struct_types.h
g2g_optim_actor/g2g_lib/common/: uvw_structure.h  (+3 more)
g2g_optim_actor/g2g_lib/cpu/double_float/: CMakeLists.txt
g2g_optim_actor/g2g_lib/gpu/cuda/single_float/: CMakeLists.txt  Makefile
param_code/: README.md  Singularity.def  data_analysis.ipynb  run_experiments.sh  run_experiments_ms.sh  run_experiments_ms_joint.sh  slurm.sh  visualisation_fits_from_csv.ipynb
param_code/.ipynb_checkpoints/: visualisation_fits_from_csv-checkpoint.ipynb
param_code/code_dft/: CMakeCache.txt  CMakeGCC_GPU.sh  SEP_Pipeline  dft.csv
param_code/code_dft_1core/: CMakeLists.txt
param_code/code_dft_joint_nnode_ms/: CMakeLists.txt  DFT_Pipeline  cmake_install.cmake  dft.csv
param_code/code_dft_nnode/: Makefile  SEP_Pipeline
param_code/code_dft_nnode_ms/: DFT_Pipeline  SEP_Pipeline  dft.csv
param_code/code_fft/: CMakeCache.txt  SEP_Pipeline  cmake_install.cmake  fft.csv  g2g.csv
param_code/code_fft_1core/: CMakeLists.txt  Makefile  SEP_Pipeline  cmake_install.cmake  fft.csv
param_code/code_fft_joint_nnode_ms/: .gitignore  CMakeLists.txt  FFT_Pipeline  fft.csv
param_code/code_fft_nnode/: CMakeLists.txt
param_code/code_fft_nnode_ms/: CMakeLists.txt  FFT_Pipeline  SEP_Pipeline  fft.csv
param_code/code_g2g/: CMakeCache.txt  Makefile  SEP_Pipeline  clean_timings  g2g.csv  log_execution_time.txt
param_code/code_g2g_1core/: SEP_Pipeline
param_code/code_g2g_1core/GPU/: CMakeLists.txt
param_code/code_g2g_6c/: SEP_Pipeline
param_code/code_g2g_clean/: CMakeCache.txt  Makefile  SEP_Pipeline  cmake_install.cmake  g2g.csv  g2g_clean.csv  log_execution_time.txt
param_code/code_g2g_joint_nnode_ms/: CMakeLists.txt  G2G_Pipeline  g2g.csv
param_code/code_g2g_joint_nnode_ms/Scripts/: reciprocal_transform_actor_inPlace.bsh
param_code/code_g2g_joint_nnode_ms/include/: top.h
param_code/code_g2g_nnode_ms/: G2G_Pipeline  g2g.csv
polynomial_timing/: README.md  plot_and_fit_averages.py  plot_and_fit_averages_bug.py  plot_rmse_compare.py  run_on_grid5000_cpu.py
polynomial_timing/averages/: addvis.csv  clean.csv  degrid.csv  dft.csv  fft.csv  fftshift.csv  finegrid.csv  gains_apply.csv  gkernel.csv  grid.csv  prolate.csv  prolate_setup.csv  s2s.csv  save_output.csv  sub_ispace.csv  vis_load.csv
polynomial_timing/sota/: plot_and_fit_averages.py
polynomial_timing/timing_cpu/: CMakeCache.txt  CMakeLists.txt  Makefile  SEP_Pipeline  best_polynomials.py  cmake_install.cmake  compute_averages.py  main.c  plot_and_fit_averages.py  run_job.sh  timing_benchmark_generation.py
polynomial_timing/timing_gpu/: CMakeLists.txt  main.c
polynomial_timing/timing_gpu/src/: fifoFunction.c  top.c
polynomial_timing/timing_gpu/src/GPU/: deconvolution_run.cu
preesm_pipelines/: README.md
preesm_pipelines/simsdp_dft_imaging_pipeline/: .~lock.test.xls#  test.xls
preesm_pipelines/simsdp_g2g_imaging_pipeline/: .project
preesm_pipelines/simsdp_g2g_imaging_pipeline_nfreq/: .project
read_ms/: README.md  data.ipynb
read_ms/.ipynb_checkpoints/: data-checkpoint.ipynb
read_ms/casacore_c++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  read_ms  read_ms.cpp  read_ms.h
read_ms/code_c/: CMakeLists.txt
read_ms/code_dft_ms/: CMakeLists.txt  SEP_Pipeline
read_ms/code_dft_ms/data/fits/: cycle_0_deconvolved.fits  cycle_0_model.fits  cycle_0_residual_image.fits  cycle_1_deconvolved.fits  cycle_1_model.fits  cycle_1_residual_image.fits  cycle_2_clean_psf.fits  cycle_2_deconvolved.fits  cycle_2_model.fits  cycle_3_deconvolved.fits  cycle_3_dirty_psf.fits  cycle_3_model.fits  cycle_4_deconvolved.fits  cycle_4_model.fits
read_ms/code_dft_ms/include/: common.h  fifoFunction.h  top.h
read_ms/code_dft_ms/src/: top.c
read_ms/code_dft_ms/src/CPU/: deconvolution_run.c  fft_run.c  gridding_run.c
read_ms/script/: csv_to_fits.py  csv_to_image.py  dft_reconstruction.py  fft_reconstruction.py  fits_to_csv.py  kernel.py  plot_im.py  plot_vis.py  psf.py
read_ms/sim_small.ms/: table.f0  table.f2  table.f5  table.f6
simsdp_dft_imaging_pipeline/: .project
simsdp_dft_imaging_pipeline/Simulation/: latency_trend.csv
simsdp_dft_imaging_pipeline_nfreq/: .project
simsdp_fft_imaging_pipeline/: .gitignore  .project
simsdp_fft_imaging_pipeline/Workflows/: Initialisation.workflow
simsdp_fft_imaging_pipeline_nfreq/: .project
simsdp_fft_imaging_pipeline_nfreq/Archi/: SimSDP_network.xml
simsdp_g2g_imaging_pipeline/Archi/: SimSDP_node.csv
simsdp_g2g_imaging_pipeline/Code/: CMakeLists.txt
simsdp_g2g_imaging_pipeline/Simulation/: correlation.csv  std_trend.csv  workload.csv
simsdp_g2g_imaging_pipeline/Workflows/: hypervisor.workflow
simsdp_g2g_imaging_pipeline_nfreq/Code/: .gitignore
simsdp_g2g_imaging_pipeline_nfreq/Simulation/: multicriteria.csv
(+450 files in other folders)
